Clean up an import.

--- a/climate_timeseries/climate_timeseries.ipynb
+++ b/climate_timeseries/climate_timeseries.ipynb
@@ -76,8 +76,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from pandas import set_option\n",
-    "set_option(\"display.max_rows\", 16)\n",
+    "pd.set_option(\"display.max_rows\", 16)\n",
     "\n",
     "LARGE_FIGSIZE = (12, 8)"
    ]
