Remove unnecesary cell and fix an import bug in statsmodels section.

--- a/climate_timeseries/climate_timeseries.ipynb
+++ b/climate_timeseries/climate_timeseries.ipynb
@@ -2884,22 +2884,9 @@
    },
    "outputs": [],
    "source": [
-    "mean_sea_level[\"mean_global\"].plot()\n",
-    "sm_model.fittedvalues.plot(label=\"OLS prediction\")\n",
-    "plt.legend(loc=\"upper left\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=LARGE_FIGSIZE)\n",
     "mean_sea_level[\"mean_global\"].plot()\n",
-    "pd_model.predict().plot(label=\"OLS prediction\")\n",
+    "sm_model.fittedvalues.plot(label=\"OLS prediction\")\n",
     "plt.legend(loc=\"upper left\")"
    ]
   },
@@ -3292,6 +3279,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from statsmodels.tsa.api import AR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -3299,7 +3297,7 @@
     "import statsmodels as sm\n",
     "# Let's remove seasonal variations by resampling annually\n",
     "data = giss_temp_series.resample(\"A\").mean().to_timestamp()\n",
-    "ar_model = sm.tsa.ar_model.AR(data, freq='A')\n",
+    "ar_model = AR(data, freq='A')\n",
     "ar_res = ar_model.fit(maxlag=60, disp=True)"
    ]
   },
