Make it compatible with Python 3.

--- a/climate_timeseries/climate_timeseries.ipynb
+++ b/climate_timeseries/climate_timeseries.ipynb
@@ -2186,7 +2186,7 @@
    "source": [
     "full_globe_temp.plot()\n",
     "rolled_series = full_globe_temp.rolling(window=10, center=False)\n",
-    "print rolled_series\n",
+    "print(rolled_series)\n",
     "rolled_series.mean().plot(figsize=LARGE_FIGSIZE)"
    ]
   },
@@ -3341,21 +3341,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
