Replace Timestamp object creation by the to_datetime method.

--- a/climate_timeseries/climate_timeseries-Part2.ipynb
+++ b/climate_timeseries/climate_timeseries-Part2.ipynb
@@ -162,8 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "# By default [] on a series accesses values using the index, not the location in the series\n",
-    "# print(temp1[0])  # This would to fail!!"
+    "# By default [] on a series accesses values using the index, not the location in the series"
    ]
   },
   {
@@ -187,7 +186,7 @@
    "outputs": [],
    "source": [
     "first_date = full_globe_temp.index[0]\n",
-    "first_date == pd.Timestamp('1880')"
+    "first_date == pd.to_datetime('1880')"
    ]
   },
   {
@@ -199,7 +198,7 @@
    "outputs": [],
    "source": [
     "# By default [] on a series accesses values using the index, not the location in the series\n",
-    "print(full_globe_temp[pd.Timestamp('1880')])\n",
+    "print(full_globe_temp[pd.to_datetime('1880')])\n",
     "# print(temp1[0])  # This would fail!!"
    ]
   },
@@ -212,7 +211,7 @@
    "outputs": [],
    "source": [
     "# Another more explicit way to do the same thing is to use loc\n",
-    "print(full_globe_temp.loc[pd.Timestamp('1990')])\n",
+    "print(full_globe_temp.loc[pd.to_datetime('1990')])\n",
     "print(full_globe_temp.iloc[0], full_globe_temp.iloc[-1])"
    ]
   },
@@ -237,7 +236,7 @@
    "outputs": [],
    "source": [
     "# New records can be added:\n",
-    "full_globe_temp[pd.Timestamp('2011')] = np.nan"
+    "full_globe_temp[pd.to_datetime('2011')] = np.nan"
    ]
   },
   {
@@ -2084,21 +2083,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
