Add an exercise to search for stations and make lookups.

--- a/climate_timeseries/climate_timeseries-Part2.ipynb
+++ b/climate_timeseries/climate_timeseries-Part2.ipynb
@@ -278,6 +278,18 @@
    },
    "outputs": [],
    "source": [
+    "# the loc operators support fancy indexing:\n",
+    "print(giss_temp.loc[1979, [\"Nov\", \"Dec\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Slicing can be done with .loc and .iloc\n",
     "print(giss_temp.loc[1979, \"Jan\":\"Jun\"])  # Note that the end point is included unlike NumPy!!!\n",
     "print(giss_temp.loc[1979, ::2])"
@@ -350,6 +362,15 @@
    "source": [
     "american_stations = local_sea_level_stations[\"Country\"] == \"USA\"\n",
     "local_sea_level_stations.loc[american_stations, [\"ID\", \"Station Name\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EXERCISE**: Print all European countries that have sea level stations. We will for now define Europe as being a country that has a station within the 30-70 latitude and a longitude in -10 to 40. You will need to combine masks using the `&` (`and`) and/or the `|` (`or`) operators, just like in Numpy.\n",
+    "\n",
+    "Bonus: print each country only once."
    ]
   },
   {
