Tweaks to exercises.

--- a/climate_timeseries/climate_timeseries-Part2.ipynb
+++ b/climate_timeseries/climate_timeseries-Part2.ipynb
@@ -1427,7 +1427,7 @@
     "                   )\n",
     "\n",
     "# Let's make a copy to work with a new, clean block of memory \n",
-    "# (if you are interested, try and remove the copy to see the consequences further down...\n",
+    "# (if you are interested, try and remove the copy to see the consequences further down...)\n",
     "european_stations = local_sea_level_stations[european_filter].copy()\n",
     "european_stations[\"Country\"].unique()"
    ]
@@ -1504,7 +1504,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE:** How many recently updated stations? Not recently updated stations? Which country has the most stations? Which country has the most recently updated stations?"
+    "**EXERCISE:** How many recently updated stations? Not recently updated stations? Which country has the most recently updated stations? \n",
+    "\n",
+    "Bonus: Which country has the most stations?"
    ]
   },
   {
@@ -1534,13 +1536,6 @@
    "outputs": [],
    "source": [
     "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**EXERCISE:** Refer to `exercises/pivot_table/pivot_tables.py`"
    ]
   },
   {
@@ -2169,21 +2164,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
