Add exercise solutions for notebook_part1.

--- a/climate_timeseries/climate_timeseries-Part1.ipynb
+++ b/climate_timeseries/climate_timeseries-Part1.ipynb
@@ -91,12 +91,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.set_option?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Change this cell to the demo location on YOUR machine\n",
-    "%cd ~/Projects/pandas_tutorial/climate_timeseries/\n",
+    "%cd ~/Projects/scipy2016/pandas_tutorial/climate_timeseries/\n",
     "%ls"
    ]
   },
@@ -129,7 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "#pd.read_<TAB>"
+    "# pd.read_<TAB>"
    ]
   },
   {
@@ -204,7 +215,8 @@
    },
    "outputs": [],
    "source": [
-    "full_globe_temp = pd.read_table(filename, sep=\"\\s+\", names=[\"year\", \"mean temp\"])\n",
+    "full_globe_temp = pd.read_table(filename, sep=\"\\s+\", \n",
+    "                                names=[\"year\", \"mean temp\"])\n",
     "full_globe_temp"
    ]
   },
@@ -270,8 +282,8 @@
    },
    "outputs": [],
    "source": [
-    "giss_temp = pd.read_table(\"data/temperatures/GLB.Ts+dSST.txt\", sep=\"\\s+\", skiprows=7,\n",
-    "                          skip_footer=11, engine=\"python\")\n",
+    "giss_temp = pd.read_table(\"data/temperatures/GLB.Ts+dSST.txt\", sep=\"\\s+\", \n",
+    "                          skiprows=7, skip_footer=11, engine=\"python\")\n",
     "giss_temp"
    ]
   },
@@ -286,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE:** Load some readings of CO2 concentrations in the atmosphere from the `data/greenhouse_gaz/co2_mm_global.txt` data file."
+    "**EXERCISE 1:** Load some readings of CO2 concentrations in the atmosphere from the `data/greenhouse_gaz/co2_mm_global.txt` data file."
    ]
   },
   {
@@ -297,7 +309,19 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# To check your code, run this cell...\n",
+    "%load solutions/exercise1.py"
    ]
   },
   {
@@ -390,6 +414,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "table_list = pd.read_html(\"data/sea_levels/Obtaining Tide Gauge Data.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "table_list[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -397,6 +443,17 @@
     "# Needs `lxml`, `beautifulSoup4` and `html5lib` python packages\n",
     "# Local backup in data/sea_levels/Obtaining Tide Gauge Data.html\n",
     "table_list = pd.read_html(\"http://www.psmsl.org/data/obtaining/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "table_list[0]"
    ]
   },
   {
@@ -561,9 +618,31 @@
    },
    "outputs": [],
    "source": [
+    "full_globe_temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Since there is only one column of values, we can make this a Series without \n",
     "# loosing information:\n",
     "full_globe_temp = full_globe_temp[\"mean temp\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "full_globe_temp"
    ]
   },
   {
@@ -740,6 +819,17 @@
    },
    "outputs": [],
    "source": [
+    "northern_sea_level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "mean_sea_level = pd.DataFrame({\"northern_hem\": northern_sea_level[\"msl_ib(mm)\"], \n",
     "                               \"southern_hem\": southern_sea_level[\"msl_ib(mm)\"]},\n",
     "                               index = northern_sea_level.year)\n",
@@ -812,6 +902,17 @@
    },
    "outputs": [],
    "source": [
+    "[name.strip().replace(\".\", \"\") for name in local_sea_level_stations.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Let's clean them up a bit:\n",
     "local_sea_level_stations.columns = [name.strip().replace(\".\", \"\") \n",
     "                                    for name in local_sea_level_stations.columns]\n",
@@ -823,6 +924,17 @@
    "metadata": {},
    "source": [
     "We can also rename an index by setting its name. For example, the index of the `mean_sea_level` dataFrame could be called `date` since it contains more than just the year:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mean_sea_level"
    ]
   },
   {
@@ -848,7 +960,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the full globe dataset, -999.00 was used to indicate that there was no value for that year. Let's search for all these values and replace them with the missing value that Pandas understand: `np.nan` "
+    "In the full globe dataset, `-999.00` was used to indicate that there was no value for that year. Let's search for all these values and replace them with the missing value that Pandas understand: `np.nan` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "full_globe_temp"
    ]
   },
   {
@@ -870,6 +993,17 @@
    },
    "outputs": [],
    "source": [
+    "full_globe_temp[full_globe_temp == -999.000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "full_globe_temp[full_globe_temp == -999.000] = np.nan\n",
     "full_globe_temp.tail()"
    ]
@@ -879,6 +1013,17 @@
    "metadata": {},
    "source": [
     "### Choosing what is the index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "giss_temp"
    ]
   },
   {
@@ -935,7 +1080,7 @@
    "outputs": [],
    "source": [
     "# We can also just select the columns we want to keep:\n",
-    "giss_temp = giss_temp[[u'Jan', u'Feb', u'Mar', u'Apr', u'May', u'Jun', u'Jul', \n",
+    "giss_temp = giss_temp[['Jan', u'Feb', u'Mar', u'Apr', u'May', u'Jun', u'Jul', \n",
     "                       u'Aug', u'Sep', u'Oct', u'Nov', u'Dec']]\n",
     "giss_temp"
    ]
@@ -1005,6 +1150,28 @@
    },
    "outputs": [],
    "source": [
+    "global_sea_level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mean_sea_level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "mean_sea_level[\"mean_global\"] = global_sea_level[\"msl_ib_ns(mm)\"]\n",
     "mean_sea_level"
    ]
@@ -1044,7 +1211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE:** Create a new series containing the average of the 2 hemispheres minus the global value to see if that is close to 0. Work inside the mean_sea_level dataframe first. Then try with the original Series to see what happens with data alignment while doing computations."
+    "**EXERCISE 2:** Create a new series containing the average of the 2 hemispheres minus the global value to see if that is close to 0. Work inside the mean_sea_level dataframe first. Then try with the original Series to see what happens with data alignment while doing computations."
    ]
   },
   {
@@ -1055,7 +1222,19 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# To check your code, run this cell...\n",
+    "%load solutions/exercise2.py"
    ]
   },
   {
@@ -1110,7 +1289,7 @@
    "outputs": [],
    "source": [
     "for col in giss_temp.columns:\n",
-    "    giss_temp.loc[:, col] = giss_temp[col].astype(np.float32)"
+    "    giss_temp[col] = giss_temp[col].astype(np.float32)"
    ]
   },
   {
@@ -1194,7 +1373,7 @@
    "outputs": [],
    "source": [
     "# This will remove any year that has a missing value. Use how='all' to keep partial years\n",
-    "giss_temp.dropna(how=\"any\").tail()"
+    "giss_temp.dropna(how=\"all\").tail()"
    ]
   },
   {
@@ -1249,7 +1428,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE:** Go back to the reading functions, and learn more about other options that could have allowed us to fold some of these pre-processing steps into the data loading."
+    "**EXERCISE 3:** Go back to the reading functions, and learn more about other options that could have allowed us to fold some of these pre-processing steps into the data loading."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Your code here..."
    ]
   },
   {
@@ -1382,6 +1572,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**EXERCISE 4:** Plot the greenhouse gas levels over the entire range of time available. Plot an estimation of the distribution of the data.\n",
+    "\n",
+    "Bonus: learn about `plt.xlim` and display the data only since `2000`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Your code here..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# To check your code, run this cell...\n",
+    "%load solutions/exercise4.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Storing our work"
    ]
   },
@@ -1396,7 +1618,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE**: explore how the to_csv method work using `ipython`'s ? and store the `giss_temp` dataframe. Do the same to store the full_globe_temp series to another file."
+    "**EXERCISE 5**: explore how the to_csv method work using `ipython`'s ? and store the `giss_temp` dataframe. Do the same to store the full_globe_temp series to another file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# To check your answer, run this cell...\n",
+    "%load solutions/exercise5.py"
    ]
   },
   {
@@ -1454,17 +1699,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%ls"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1490,27 +1724,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EXERCISE**: Add the greenhouse gas dataset in this data store. Store it in a separate folder."
+    "**EXERCISE 6**: Add the greenhouse gas dataset in this data store. Store it in a separate folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# To check your answer, run this cell...\n",
+    "%load solutions/exercise6.py"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
