Add solution for exercise 7.

--- a/climate_timeseries/climate_timeseries-Part2.ipynb
+++ b/climate_timeseries/climate_timeseries-Part2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last updated: June 29th 2016"
+    "Last updated: July 14th 2016"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# Change this cell to the demo location on YOUR machine\n",
-    "%cd ~/Projects/pandas_tutorial/climate_timeseries/\n",
+    "%cd ~/Projects/scipy2016/pandas_tutorial/climate_timeseries/\n",
     "%ls"
    ]
   },
@@ -151,7 +151,7 @@
    },
    "outputs": [],
    "source": [
-    "full_globe_temp"
+    "full_globe_temp[\"2010\"]"
    ]
   },
   {
@@ -240,6 +240,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "full_globe_temp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -279,7 +290,7 @@
    "outputs": [],
    "source": [
     "# the loc operators support fancy indexing:\n",
-    "print(giss_temp.loc[1979, [\"Nov\", \"Dec\"])"
+    "print(giss_temp.loc[1979, [\"Nov\", \"Dec\"]])"
    ]
   },
   {
@@ -299,12 +310,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mask = [True, False] * 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Masking can also be used in one or more dimensions. For example, another way to grab every other month for the first year:\n",
-    "mask = [True, False] * 6\n",
     "print(giss_temp.iloc[0, mask])\n",
     "print(giss_temp.loc[1880, mask])"
    ]
@@ -349,7 +370,17 @@
    },
    "outputs": [],
    "source": [
-    "local_sea_level_stations.columns"
+    "american_stations = local_sea_level_stations[\"Country\"] == \"USA\"\n",
+    "local_sea_level_stations.loc[american_stations, [\"ID\", \"Station Name\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EXERCISE 7**: Print all European countries that have sea level stations. We will for now define Europe as being a country that has a station within the 30-70 latitude and a longitude in -10 to 40. You will need to combine masks using the `&` (`and`) and/or the `|` (`or`) operators, just like in Numpy.\n",
+    "\n",
+    "Bonus: print each country only once."
    ]
   },
   {
@@ -360,17 +391,19 @@
    },
    "outputs": [],
    "source": [
-    "american_stations = local_sea_level_stations[\"Country\"] == \"USA\"\n",
-    "local_sea_level_stations.loc[american_stations, [\"ID\", \"Station Name\"]]"
+    "# Your code here..."
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
-    "**EXERCISE**: Print all European countries that have sea level stations. We will for now define Europe as being a country that has a station within the 30-70 latitude and a longitude in -10 to 40. You will need to combine masks using the `&` (`and`) and/or the `|` (`or`) operators, just like in Numpy.\n",
-    "\n",
-    "Bonus: print each country only once."
+    "# Check your solution by running this cell...\n",
+    "%load solutions/exercise7.py"
    ]
   },
   {
@@ -504,6 +537,39 @@
    },
    "outputs": [],
    "source": [
+    "mean_sea_level.northern_hem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = full_globe_temp.index.to_timestamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x.to_period(\"M\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Convert its index from timestamp to period: it is more meaningfull since it was measured and averaged over the year...\n",
     "full_globe_temp.index = full_globe_temp.index.to_period()\n",
     "full_globe_temp"
@@ -589,7 +655,7 @@
    "outputs": [],
    "source": [
     "# Can also specify a start and a stop date, as well as a frequency\n",
-    "pd.date_range('1/1/1880', '1/1/2016', freq=\"A\")"
+    "pd.date_range('1/1/1880', '1/1/2016', freq=\"AS\")"
    ]
   },
   {
@@ -642,6 +708,17 @@
    "metadata": {},
    "source": [
     "Let's look at our `local_sea_level_stations` dataset some more, to learn more about it and also do some formatting. What is the range of dates and lattitudes we have, the list of countries, the range of variations, ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "local_sea_level_stations.Date"
    ]
   },
   {
@@ -764,7 +841,8 @@
    },
    "outputs": [],
    "source": [
-    "local_sea_level_stations.sort_values(by=[\"Date\", \"Country\"], ascending=False)"
+    "local_sea_level_stations.sort_values(by=[\"Date\", \"Country\"], \n",
+    "                                     ascending=False)"
    ]
   },
   {
@@ -2167,18 +2245,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
   }
  },
  "nbformat": 4,
